<resources>
    <string name="app_name">UserInterfaceToyApp</string>

    <string name="button_send">Send</string>
    <string name="text_view_received">This will show what is received</string>

    <string name="intent_extra_key">intent_extra_key</string>
    <string name="button_text">Button</string>
    <string name="tv_username">USERNAME</string>
    <string name="tv_password">PASSWORD</string>
    <string name="button1">Button1</string>
    <string name="hide_button1">Hide Button1</string>
    <string name="button">Button</string>
    <string name="show_button1">Show Button1</string>

    <string name="button_start_barriersAspectRatioActivity">BarriersAspectRatioActivity</string>
    <string name="button_start_GoneChainGuidelinesActivity">GoneChainGuidelinesActivity</string>
    <string name="button_start_PlaceholderAnimationsActivity">PlaceholderAnimationsActivity</string>
    <string name="button_start_PlaceholderTemplateActivity">PlaceholderTemplateActivity</string>
    <string name="button_start_ConstraintSetActivity">ConstraintSetActivity</string>
    <string name="button_start_IncludeMergeActivity">IncludeMergeActivity</string>
    <string name="button_start_NavDrawerActivity">NavDrawerActivity</string>
    <string name="button_start_CustomViewActivity">CustomViewActivity</string>
    <string name="button_start_CompoundViewActivity">CompoundViewActivity</string>
</resources>
