<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/root_layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:padding="@dimen/margin_normal">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_barriersAspectRatioActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_medium"
            android:text="@string/button_start_barriersAspectRatioActivity"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_GoneChainGuidelinesActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/button_start_GoneChainGuidelinesActivity"
            app:layout_constraintEnd_toEndOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintStart_toStartOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintTop_toBottomOf="@id/button_start_barriersAspectRatioActivity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_PlaceholderAnimationsActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/button_start_PlaceholderAnimationsActivity"
            app:layout_constraintEnd_toEndOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintStart_toStartOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintTop_toBottomOf="@id/button_start_GoneChainGuidelinesActivity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_PlaceholderTemplateActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/button_start_PlaceholderTemplateActivity"
            app:layout_constraintEnd_toEndOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintStart_toStartOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintTop_toBottomOf="@id/button_start_PlaceholderAnimationsActivity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_ConstraintSetActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/button_start_ConstraintSetActivity"
            app:layout_constraintEnd_toEndOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintStart_toStartOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintTop_toBottomOf="@id/button_start_PlaceholderTemplateActivity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_IncludeMergeActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/button_start_IncludeMergeActivity"
            app:layout_constraintEnd_toEndOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintStart_toStartOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintTop_toBottomOf="@id/button_start_ConstraintSetActivity" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_start_NavDrawerActivity"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_medium"
            android:text="@string/button_start_NavDrawerActivity"
            app:layout_constraintEnd_toEndOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintStart_toStartOf="@+id/button_start_barriersAspectRatioActivity"
            app:layout_constraintTop_toBottomOf="@id/button_start_IncludeMergeActivity" />


        <androidx.constraintlayout.widget.Barrier
            android:id="@+id/barrier_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:barrierDirection="bottom"
            app:constraint_referenced_ids="button_start_NavDrawerActivity" />


        <TextView
            android:id="@+id/tv_receiving"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-medium"
            android:gravity="center"
            android:text="@string/text_view_received"
            android:textSize="@dimen/text_size_standard"
            app:layout_constraintBottom_toTopOf="@id/edit_text_sending"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/barrier_button" />

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/edit_text_sending"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_normal"
            app:layout_constraintBottom_toTopOf="@id/button_send"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/button_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_send"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>